kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dunand-mathieu
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000 # Port exposé par le container Frontend
